Fix margins and spacings

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -74,7 +74,6 @@ body {
     color: $brand-color-primary;
 }
 
-
 .panel {
     display: block;
     position: relative;
@@ -88,6 +87,16 @@ body {
     background-color: #F8FAFB;
 }
 .panel-distance {
+    margin-top: 2.25rem;
+    margin-bottom: 2.25rem;
+}
+.panel-distance:last-child {
+    margin-bottom: 0;
+}
+.panel-distance.panel-secondary {
+    margin: 0;
+}
+.panel-distance.panel-secondary:first-child {
     margin-top: 2.25rem;
 }
 .panel-spaced {
@@ -319,7 +328,7 @@ body {
     width: 472px;
     background-color: #fff;
     border-left: 1px solid $brand-border-color;
-    z-index: 50;
+    z-index: 200;
     right:0;
 }
 .order-list-panel-open {
